code/infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hnag
  labels:
    name: hnag
    istio-injection: enabled
